--- a/package.json
+++ b/package.json
@@ -29,8 +29,29 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
+    "@vitejs/plugin-react": "^4.2.1",
+    "firebase": "^10.12.0",
+    "formik": "^2.4.6",
+    "notiflix": "^3.2.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.11",
+    "swiper": "^11.1.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
